--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,6 @@
     <hr>
   </ul>
 </div>
-
 <!-- END MENU -->
 
 <!-- MAIN -->
@@ -129,12 +128,12 @@
 
    
     <!-- CARD DE RESUMO -->
-    <div class="cardResume" (click)="toggleText()">
+    <div class="cardResume" >
       <div class="titleCard">Resumo</div>
       <div class="contentResume" [class.expanded]="showFullText">
         <p>
           {{ firstParagraph }}
-          <span class="btn-show-more" *ngIf="!showFullText">Ler mais...</span>
+          <span class="btn-show-more" (click)="toggleText()" *ngIf="!showFullText">ver mais...</span>
         </p>
         <div class="remainingText">
           {{ remainingText }}
@@ -150,40 +149,45 @@
       <div class="contentDiscussions">
         <div *ngIf="!createTopicForm" class="centralize">
 
-          <h2>Compartilhe suas ideias ou duvidas com os autores</h2>
+          <h2>{{topicSended ? 'Seu tópico foi enviado com sucesso! :D': 'Compartilhe suas ideias ou duvidas com os autores'}}</h2>
 
-          <div class="icons">
+          <div class="icons" *ngIf="!topicSended">
             <img src="../assets/icone1.png" alt="icone1">
             <img src="../assets/icone2.png" alt="icone2">
             <img src="../assets/icone3.png" alt="icone3">
           </div>
 
-          <p>Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade? Deixe seus questionamentos ou sugestões para o autor!</p>
+          <p>{{topicSended? 'Agradecemos por sua contribuição, uma notificação será enviada ao seu email assim que seu tópico for respondido!':'Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade? Deixe seus questionamentos ou sugestões para o autor!'}}</p>
+
+          <a href="#" *ngIf="topicSended">Descubra outros trabalhos!</a>
 
         </div>
 
-        <img *ngIf="!createTopicForm" src="../assets/criar_topico.png" alt="criar_topico" class="btn-create-topic" (click)="createTopic()">
+        <button *ngIf="!createTopicForm" class="btn-create-topic" (click)="createTopic()">{{topicSended ? 'criar novo tópico': 'criar tópico'}}</button>
 
 
         <div *ngIf="createTopicForm" class="createTopic">
+          <form #topicForm="ngForm">
             <p>Tem uma dúvida ou sugestão? Compartilhe seu feedback com os autores!</p>
             <h2 class="topicTitle">Assunto</h2>
-            <input type="text" class="subject" placeholder="Defina um tópico sucinto para notificar os autores..." [(ngModel)]="topicTitle">
+            <input type="text" class="subject" name="topicTitle" placeholder="Defina um tópico sucinto para notificar os autores..."
+                   [(ngModel)]="topicTitle" required>
             <h2 class="topicTitle">Conteúdo</h2>
-            <textarea class="writeContent" [(ngModel)]="topicDescription"></textarea>
+            <textarea class="writeContent" name="topicDescription" [(ngModel)]="topicDescription" required></textarea>
             <div class="submitDiv">
-                <button class="submit" (click)="waitingFeedback()">Enviar</button>
+                <button class="submit" (click)="sendTopic()">Enviar</button>
             </div>
+          </form>        
         </div>
 
         <hr>
 
           <!-- CARD DE PERGUNTAS -->
-          <div *ngFor="let topic of topics" class="answered-topic">
+          <div *ngFor="let topic of topics" class="answered-topic" (click)="toggleOpenTopic(topic)">
               <div class="blur" *ngIf="!topic.answered">
                 <img src="../assets/waiting.png" alt="waiting" class="waiting">
                 
-                Aguardando feedback dos autores<br><br>
+                <h3>Aguardando feedback dos autores</h3>
 
                 <button class="editButton" (click)="editTopic(topic)">Editar tópico</button>
               </div>
@@ -195,30 +199,34 @@
                 <p>{{topic.description}}</p>
 
                 <div class="feedbacks">
-                  <img src="../assets/mais_infos.png" alt="mais_infos" class="mais_infos" (click)="toggleOpenTopic(topic)">
+                  <img src="../assets/mais_infos.png" alt="mais_infos" class="mais_infos">
                   <img src="../assets/favoritar.png" alt="favoritar" class="favoritar" (click)="giveLike(topic)">
                   <p class="likeReplies">{{topic.likes}} likes</p>
                   <p class="likeReplies">{{topic.replies.length}} respostas</p>
                 </div>
 
                 <!-- RESPOSTAS -->
-                <div *ngIf="topic.open">
-                  <div *ngFor="let reply of topic.replies; let i = index" class="reply"
-                  [ngStyle]="{'background-color': i % 2 === 0 ? '#E7E7E7' : '#FFFFFF'}">
-                    <h3>{{reply.author}}</h3>
-                    <p>{{reply.description}}</p>
+                <div class="comments-container">
+                  <div *ngIf="topic.open">
+                    <div *ngFor="let reply of topic.replies; let i = index" class="reply"
+                    [ngStyle]="{'background-color': i % 2 === 0 ? '#E7E7E7' : '#FFFFFF'}">
+                      <h3>{{reply.author}}</h3>
+                      <p>{{reply.description}}</p>
 
-                    <div class="replyType">
-                      <h3>{{reply.type}}</h3>
-                      <img src="../assets/replyType.png" alt="replyType" *ngIf="reply.type.length > 1">
+                      <div class="replyType">
+                        <h3>{{reply.type}}</h3>
+                        <img src="../assets/replyType.png" alt="replyType" *ngIf="reply.type.length > 1">
+                      </div>
                     </div>
                   </div>
                 </div>
                 <!-- END RESPOSTAS -->
+            </div>
           </div>
           <!-- END CARD DE PERGUNTAS -->
 
           
+      </div>
     </div>
     <!-- END CARD DE DISCUSSÕES -->
 
@@ -228,20 +236,3 @@
     <!-- END FOOTER -->
 
     
-
-
-    <!-- <div class="comments-container">
-      Os comentários de um tópico devem estar encapsulados num elemento com a classe .comments-container
-    </div>
-
-    <form>
-      Assunto:
-      <input class="subject" placeholder="Defina um tópico sucinto para notificar os autores...">
-
-      <button>Enviar</button>
-    </form>
-
-    <h3>Após submeter o formulário, a seguinte mensagem deve ser exibida: Aguardando feedback dos autores</h3>
-  </div>
-</div> -->
-<!-- END MAIN -->
