--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -826,6 +826,10 @@ hr{
         width: 100%;      
       }
 
+      .favoritar{
+        cursor: pointer;
+      }
+
       .likeReplies{
         color:#757575;
         cursor: pointer;
